@@ -1201,6 +1201,9 @@ mapstruct *load_original_map(const char *filename, int flags) {
         MAP_DIFFICULTY(m)=calculate_difficulty(m);
     set_map_reset_time(m);
 
+    /* In case other objects press some buttons down */
+    update_buttons(m);
+
     /* Handle for map load event */
     execute_global_event(EVENT_MAPLOAD, m);
 
@@ -1834,8 +1837,7 @@ mapstruct *ready_map_name(const char *name, int flags) {
      */
 
     decay_objects(m); /* start the decay */
-    /* In case other objects press some buttons down */
-    update_buttons(m);
+
     if (m->outdoor)
         set_darkness_map(m);
     /* run the weather over this map */
